# imu_vis

./: .gitignore  .todo.md  AGENT.md  AGENTS.md  CLAUDE.md  HANDOFF.md  LICENSE  README.md  TODO.md  default.toml  index.html  package.json  pnpm-lock.yaml  processor.toml  vite.config.ts
src-tauri/: API_ENDPOINTS.md  Cargo.toml  Info.plist  processor.toml  tauri.conf.json
src-tauri/crates/math_f64/: Cargo.toml
src-tauri/crates/math_f64/src/: common.rs  dmat3.rs  dquat.rs  dvec2.rs  dvec3.rs  dvec4.rs  lib.rs
src-tauri/src/: app_state.rs  debug_monitor.rs  lib.rs  logger.rs  recorder.rs
src-tauri/src/commands/: calibration.rs  debug.rs  diagnostics.rs  imu.rs  mod.rs  output.rs  recording.rs  response.rs  test.rs
src-tauri/src/data/: bluetooth.rs
src-tauri/src/imu/: client.rs  config.rs  mod.rs
src-tauri/src/processor/: mod.rs  parser.rs
src-tauri/src/processor/attitude_fusion/: madgwick.rs  mahony.rs  mod.rs  types.rs
src-tauri/src/processor/calibration/: calibration.rs  logic.rs  mod.rs  types.rs
src-tauri/src/processor/ekf/: ekf.rs  logic.rs  mod.rs  types.rs
src-tauri/src/processor/filter/: filter.rs  logic.rs  mod.rs  types.rs
src-tauri/src/processor/navigator/: legacy.rs  logic.rs  mod.rs  types.rs
src-tauri/src/processor/output/: logic.rs  mod.rs  output.rs  types.rs
src-tauri/src/processor/parser/: data.rs  logic.rs  mod.rs  parser.rs  types.rs
src-tauri/src/processor/pipeline/: diagnostics.rs  logic.rs  (+3 more)
src-tauri/src/recorder/: db.rs  mod.rs  service.rs
src-tauri/src/types/: bluetooth.rs  debug.rs  mod.rs  outputs.rs  recording.rs
(+179 files in other folders)
