[package]
name = "imu-vis"
version = "0.1.0"
description = "A Tauri App"
authors = ["wanger"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow              = "1.0"
axum                = { version = "0.8",  features = ["ws"] }
bitflags            = "2.9"
btleplug            = "0.11"
bytes               = "1.11.0"
flume               = "0.12"
futures             = "0.3"
serde               = { version = "1",    features = ["derive"] }
serde_json          = "1"
tauri               = { version = "2",    features = [] }
tauri-plugin-opener = "2"
thiserror           = "2.0"
tokio               = { version = "1.47", features = ["time"] }
toml                = "0.8"
tracing             = "0.1"
tracing-appender    = "0.2"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
rusqlite            = { version = "0.32", features = ["bundled"] }

math_f64            = { path = "crates/math_f64" }

[profile.dev]
opt-level = 3
debug = true
